--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
 body {
     background-color: hsl(212, 45%, 89%);
-}
-.cardArea {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .card {
     margin: 0 auto;
-    width: 334px;
-    height: 520px;
+    max-width: 400px;
+    padding: 10px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -21,53 +20,33 @@ body {
 }
 
 .codeImg {
-    width: 300px;
-    height: 300px;
+    max-width: 100%;
     border-radius: 10px;
 }
 
 .p1 {
-    margin: 10px;
-    width: 300px;
-    font-size: 27px;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    margin-top: 1em;
     text-align: center;
     color: hsl(218, 44%, 22%);
 }
 
 .p2 {
-    margin: 10px;
-    margin-bottom: 30px;
-    width: 300px;
-    font-size: 20px;
+    margin-left: 0.3em;
+    margin-right: 0.3em;
+    margin-top: 0.3em;
+    margin-bottom: 2em;
     text-align: center;
+    font-size: 1.5em;
     color: hsl(220, 15%, 55%);
 }
 
 /* responsive */
 @media (max-width: 375px) {
     .card {
-        width: 314px;
-        height: 500px;
-        
-    }
-    
-    .codeImg {
-        width: 280px;
-        height: 280px;
-        border-radius: 10px;
-    }
-
-    .p1 {
-        margin: 6px;
-        width: 280px;
-        font-size: 24px;
-    }
-    
-    .p2 {
-        margin: 6px;
-        margin-bottom: 30px;
-        width: 280px;
-        font-size: 18px;
+        max-width: 375px;
+        padding: 10px;
     }
     
 }
